# Navi

./: .gitignore  Cargo.toml  README.md  install.sh
.agent/skills/navi/: COMMANDS.md  SKILL.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  formatter.rs  main.rs
crates/cli/src/ast/: engine.rs
crates/cli/src/commands/: callers.rs  deps.rs  diff.rs  exports.rs  flow.rs  grep.rs  impls.rs  init.rs  jump.rs  list.rs  mod.rs  outline.rs  read.rs  refs.rs  scope.rs  search.rs  sg.rs  tree.rs  types.rs  xref.rs
crates/cli/templates/: COMMANDS.md  SKILL.md
src/: cli.rs  formatter.rs  main.rs
src/ast/: engine.rs
src/commands/: jump.rs  list.rs  mod.rs  read.rs  refs.rs
